test/Fail/Issue2167.err
Issue2167.agda:4.8-12: error: [InvalidDottedExpression]
Invalid dotted expression
when checking that the expression .Set has type Set₁
